--- a/index.html
+++ b/index.html
@@ -105,91 +105,79 @@
         <h3 class="line">Tech stack</h3>
         <div class="container tech-steck">
           <div class="tech-steck-item">
-            <img src="/icons/icons8-html-5.svg" alt="HTML5" class="tech-icon" />
+            <img src="./icons/html5.svg" alt="HTML5" class="tech-icon" />
             <span>HTML5</span>
           </div>
           <div class="tech-steck-item">
-            <img src="/icons/icons8-css3.svg" alt="CSS3" class="tech-icon" />
+            <img src="./icons/css3.svg" alt="CSS3" class="tech-icon" />
             <span>CSS3</span>
           </div>
           <div class="tech-steck-item">
-            <img
-              src="/icons/icons8-javascript.svg"
-              alt="JS"
-              class="tech-icon" />
+            <img src="./icons/javascript.svg" alt="JS" class="tech-icon" />
             <span>JavaScript</span>
           </div>
           <div class="tech-steck-item">
             <img
-              src="/icons/icons8-typescript.svg"
+              src="./icons/typescript.svg"
               alt="typescript"
               class="tech-icon" />
             <span>Typescript</span>
           </div>
           <div class="tech-steck-item">
-            <img
-              src="/icons/icons8-react-native.svg"
-              alt="React"
-              class="tech-icon" />
+            <img src="./icons/reactnative.svg" alt="React" class="tech-icon" />
             <span>React</span>
           </div>
           <div class="tech-steck-item">
-            <img
-              src="/icons/icons8-angularjs.svg"
-              alt="Angular"
-              class="tech-icon" />
+            <img src="./icons/angularjs.svg" alt="Angular" class="tech-icon" />
             <span>Angular</span>
           </div>
           <div class="tech-steck-item">
-            <img src="/icons/icons8-redux.svg" alt="Redux" class="tech-icon" />
+            <img src="./icons/redux.svg" alt="Redux" class="tech-icon" />
             <span>Redux</span>
           </div>
           <div class="tech-steck-item">
-            <img src="/icons/icons8-git.svg" alt="Git" class="tech-icon" />
+            <img src="./icons/git.svg" alt="Git" class="tech-icon" />
             <span>Git</span>
           </div>
           <div class="tech-steck-item">
-            <img
-              src="/icons/icons8-github.svg"
-              alt="Github"
-              class="tech-icon" />
+            <img src="./icons/github.svg" alt="Github" class="tech-icon" />
             <span>Github</span>
           </div>
           <div class="tech-steck-item">
-            <img src="/icons/icons8-sass.svg" alt="Sass" class="tech-icon" />
+            <img src="./icons/sass.svg" alt="Sass" class="tech-icon" />
             <span>Sass</span>
           </div>
           <div class="tech-steck-item">
             <img
-              src="/icons/rest-api-icon.svg"
+              src="./icons/restapi.svg"
               alt="RestApi"
               class="tech-icon" />
             <span>RestApi</span>
           </div>
           <div class="tech-steck-item">
             <img
-              src="/icons/icons8-bootstrap.svg"
+              src="./icons/bootstrap.svg"
               alt="Bootstrap"
               class="tech-icon" />
             <span>Bootstrap</span>
           </div>
           <div class="tech-steck-item">
             <img
-              src="/icons/icons8-material-ui.svg"
+              src="./icons/materialui.svg"
               alt="Material"
               class="tech-icon" />
             <span>Material</span>
           </div>
           <div class="tech-steck-item">
             <img
-              src="/icons/icons8-webpack.svg"
+              src="./icons/webpack.svg"
               alt="webpack"
               class="tech-icon" />
             <span>Webpack</span>
           </div>
           <div class="tech-steck-item">
             <img
-              src="/icons/parcel-svgrepo-com.svg"
+              src="./icons/parcel.svg"
               alt="parcel"
               class="tech-icon" />
             <span>Parcel</span>
@@ -223,7 +211,7 @@
                     class="projects-link"
                     >Code
                     <img
-                      src="/icons/icons8-github.svg"
+                      src="./icons/github.svg"
                       alt="Github"
                       class="tech-icon"
                   /></a>
@@ -234,7 +222,7 @@
                     class="projects-link"
                     >Live Demo
                     <img
-                      src="/icons/icons8-external-link.svg"
+                      src="./icons/external.svg"
                       alt="External-link"
                       class="tech-icon"
                   /></a>
@@ -268,7 +256,7 @@
                     class="projects-link"
                     >Code
                     <img
-                      src="/icons/icons8-github.svg"
+                      src="./icons/github.svg"
                       alt="Github"
                       class="tech-icon"
                   /></a>
@@ -279,7 +267,7 @@
                     class="projects-link"
                     >Live Demo
                     <img
-                      src="/icons/icons8-external-link.svg"
+                      src="./icons/external.svg"
                       alt="External-link"
                       class="tech-icon"
                   /></a>
