--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                         class="projects-link"
                         >Code
                         <img
-                          src="/icons/icons8-github.svg"
+                          src="./icons/github.svg"
                           alt="Github"
                           class="tech-icon"
                       /></a>
@@ -120,7 +120,7 @@
                         class="projects-link"
                         >Live Demo
                         <img
-                          src="/icons/icons8-external-link.svg"
+                          src="./icons/external.svg"
                           alt="External-link"
                           class="tech-icon"
                       /></a>
@@ -152,7 +152,7 @@
                         class="projects-link"
                         >Code
                         <img
-                          src="/icons/icons8-github.svg"
+                          src="./icons/github.svg"
                           alt="Github"
                           class="tech-icon"
                       /></a>
@@ -163,7 +163,7 @@
                         class="projects-link"
                         >Live Demo
                         <img
-                          src="/icons/icons8-external-link.svg"
+                          src="./icons/external.svg"
                           alt="External-link"
                           class="tech-icon"
                       /></a>
@@ -192,7 +192,7 @@
                         class="projects-link"
                         >Code
                         <img
-                          src="/icons/icons8-github.svg"
+                          src="./icons/github.svg"
                           alt="Github"
                           class="tech-icon"
                       /></a>
@@ -203,7 +203,7 @@
                         class="projects-link"
                         >Live Demo
                         <img
-                          src="/icons/icons8-external-link.svg"
+                          src="./icons/external.svg"
                           alt="External-link"
                           class="tech-icon"
                       /></a>
@@ -235,7 +235,7 @@
                         class="projects-link"
                         >Code
                         <img
-                          src="/icons/icons8-github.svg"
+                          src="./icons/github.svg"
                           alt="Github"
                           class="tech-icon"
                       /></a>
@@ -246,7 +246,7 @@
                         class="projects-link"
                         >Live Demo
                         <img
-                          src="/icons/icons8-external-link.svg"
+                          src="./icons/external.svg"
                           alt="External-link"
                           class="tech-icon"
                       /></a>
@@ -275,7 +275,7 @@
                         class="projects-link"
                         >Code
                         <img
-                          src="/icons/icons8-github.svg"
+                          src="./icons/github.svg"
                           alt="Github"
                           class="tech-icon"
                       /></a>
@@ -286,7 +286,7 @@
                         class="projects-link"
                         >Live Demo
                         <img
-                          src="/icons/icons8-external-link.svg"
+                          src="./icons/external.svg"
                           alt="External-link"
                           class="tech-icon"
                       /></a>
@@ -318,7 +318,7 @@
                         class="projects-link"
                         >Code
                         <img
-                          src="/icons/icons8-github.svg"
+                          src="./icons/github.svg"
                           alt="Github"
                           class="tech-icon"
                       /></a>
@@ -329,7 +329,7 @@
                         class="projects-link"
                         >Live Demo
                         <img
-                          src="/icons/icons8-external-link.svg"
+                          src="./icons/external.svg"
                           alt="External-link"
                           class="tech-icon"
                       /></a>
@@ -358,7 +358,7 @@
                         class="projects-link"
                         >Code
                         <img
-                          src="/icons/icons8-github.svg"
+                          src="./icons/github.svg"
                           alt="Github"
                           class="tech-icon"
                       /></a>
@@ -369,7 +369,7 @@
                         class="projects-link"
                         >Live Demo
                         <img
-                          src="/icons/icons8-external-link.svg"
+                          src="./icons/external.svg"
                           alt="External-link"
                           class="tech-icon"
                       /></a>
